--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "init-db": "node scripts/runSQLScript.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.10",
     "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "dotenv": "^10.0.0"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "jest": "^27.0.6",
-    "supertest": "^6.1.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.1.3"
   }
 }
